--- a/collect/requirements.txt
+++ b/collect/requirements.txt
@@ -4,6 +4,7 @@ black==24.10.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+greenlet==3.1.1
 idna==3.10
 isort==5.13.2
 lxml==5.3.0
@@ -13,12 +14,14 @@ packaging==24.1
 pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.6
+psycopg2==2.9.10
 pycodestyle==2.12.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
 six==1.16.0
 soupsieve==2.6
+SQLAlchemy==2.0.36
 tomli==2.0.2
 typing_extensions==4.12.2
 tzdata==2024.2
