Made  dockerfile clean

--- a/collect/Dockerfile
+++ b/collect/Dockerfile
@@ -4,12 +4,10 @@ WORKDIR /bookscollector
 
 RUN apt-get install libpq-dev
 
-COPY ../requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt /bookscollector
+
+RUN pip install --no-cache-dir -r /bookscollector/requirements.txt
 
 COPY collector.py /bookscollector
-
-ARG PSQL_URL
-ARG SERVER_PORT
 
 CMD [ "python", "-u", "/bookscollector/collector.py" ]
