--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,11 @@ services:
       dockerfile: ./Dockerfile
       
     environment:
-        #TODO: Change to var
-      - POSTGRES_PASSWORD=1123
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=collector
       - POSTGRES_DB=BooksDB
-      - POSTGRES_PORT=5432
+      - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_IP=books_db
-
 
   db:
     image: postgres
@@ -22,11 +20,8 @@ services:
     restart: always
     shm_size: 128mb
     environment:
-      #TODO: Change to var
-      POSTGRES_PASSWORD: 1123
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: collector
       POSTGRES_DB: BooksDB
     ports:
-      - 5432:5432
-    
-
+      - ${POSTGRES_PORT}:5432
